Update 'go-tonqwjjb' component image to: quay.io/rhtap_qe/go-tonqwjjb:437bb561250273e3fda1e03bca470bfdcfd32394@sha256:a0de9835464ef0d4808c73e491b992fa1712bde7b9c87b067a63449c198cc96a

--- a/components/go-tonqwjjb/overlays/development/deployment-patch.yaml
+++ b/components/go-tonqwjjb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-tonqwjjb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-tonqwjjb:437bb561250273e3fda1e03bca470bfdcfd32394@sha256:a0de9835464ef0d4808c73e491b992fa1712bde7b9c87b067a63449c198cc96a
+          name: container-image
